All notable changes to this package will be documented in this file. For a
complete changelog, see https://github.com/JolleJolles/pythutils/commits/

Latest changes:

2020-02-24 - version 1.2.1
    * improved logger class for easier starting and stopping of logging across
      systems
    * enabled sameline printing in lineprint function
    * fixed varname in seqcount function

2020-02-17 - version 1.2.0
    * Added get_spaced_colors function for getting a list of equally spaced
      colors on the color spectrum
    * Added function to draw bi-coloured circles of increasing size on an image
    * Added function to draw a dotted or dashed line on an image
    * Added function to draw a semi-transparent polyline with decreasing
      width on an image
    * Added function to convert opencv contour object to tuple

2019-12-24 - version 1.1.5
    * roi_to_zoom function now rounds the zoom values
    * Added checkroi function to make sure roi is within resolution region
    * improved listfiles function to include full dir for nested
    * added move file function
    * Added new filechecker function

2019-11-16 - version 1.1.4
    * Added function to extract common prefix of files

2019-11-16 - version 1.1.3
    * Improved videowriter for opencv

2019-11-16 - version 1.1.2
    * Further improvements to setup file, especially for dependencies

2019-11-15 - version 1.1.1
    * Various small fixes to setup file

2019-11-14 - version 1.1.0
    * Made python 2.7 compatible

2019-11-06 - version 1.0.0
    * Public release on PyPI