@@ -2,6 +2,8 @@ All notable changes to this package will be documented in this file. For a
 complete changelog, see https://github.com/JolleJolles/pythutils/commits/
 
 Latest changes:
+    * Further generalised mouse_events class
+    * Added a function to fix the coordinates of a rectangle to be from LT to BR
 
 2020-02-24 - version 1.2.1
     * improved logger class for easier starting and stopping of logging across
